--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "moment": "^2.23.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.3",
     "rxjs": "~6.3.3",
