--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "gridfs-stream": "^1.1.1",
     "moment": "^2.23.0",
-    "mongodb": "^3.1.10",
+    "mongodb": "^3.1.13",
     "mongoose": "^5.4.3",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
