--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "mongoose": "^5.4.3",
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
+    "ngx-quill": "^4.5.2",
+    "quill": "^1.3.6",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
