--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      // "ngx-quill": "node_modules/ngx-quill/bundles/ngx-quill.umd.js",
+      // "quill": "node_modules/quill/dist/quill.js"
+    }
   }
 }
