--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -21,9 +22,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@auth0/angular-jwt": "^2.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "gridfs-stream": "^1.1.1",
     "moment": "^2.23.0",
     "mongodb": "^3.1.13",
@@ -31,6 +35,9 @@
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
     "ngx-quill": "^4.5.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "quill": "^1.3.6",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
